--- a/app/src/main/res/menu/menu_news.xml
+++ b/app/src/main/res/menu/menu_news.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ru.sike.lada.NewsActivity">
+    tools:context="ru.sike.lada.activities.NewsActivity">
     <item
         android:id="@+id/action_news_refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
