--- a/app/src/main/res/layout/fragment_news_categories.xml
+++ b/app/src/main/res/layout/fragment_news_categories.xml
@@ -12,10 +12,10 @@
 
     <LinearLayout
         android:id="@+id/news_categories_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:visibility="visible">
 
         <ProgressBar
@@ -24,32 +24,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/progressBar"/>
 
-        <TextView
-            android:text="@string/new_categories_fragment_update_list_msg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/news_categories_offline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:visibility="gone">
-        <TextView
-            android:text="@string/new_categories_fragment_offline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"/>
-        <Button
-            android:id="@+id/new_categories_fragment_refresh"
-            android:text="Обновить"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 </FrameLayout>
