--- a/app/src/main/res/layout/item_news_first.xml
+++ b/app/src/main/res/layout/item_news_first.xml
@@ -40,6 +40,7 @@
             android:layout_marginBottom="@dimen/activity_vertical_extra_small_margin"
             android:maxLines="3"
             android:ellipsize="end"
+            android:textColor="@color/newsItemTitleColor"
             android:textSize="@dimen/item_news_title_font_size" />
 
         <TextView
