--- a/app/src/main/res/layout/item_news_first.xml
+++ b/app/src/main/res/layout/item_news_first.xml
@@ -14,6 +14,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
         android:paddingLeft="@dimen/item_news_horizontal_margin"
         android:paddingRight="@dimen/item_news_horizontal_margin"
         android:paddingTop="@dimen/item_news_vertical_margin"
