--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="fullNewsPreviewBackgroundColor">#FFEEEEEE</color>
     <color name="fullNewsPreviewBackgroundBorderColor">#FFBBBBBB</color>
     <color name="fullNewsPreviewTextColor">#DD000000</color>
+
+    <color name="fullNewsTextColor">#DD444444</color>
 </resources>
