--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -154,6 +154,60 @@
                 android:layout_height="wrap_content">
             </FrameLayout>
 
+            <LinearLayout
+                android:id="@+id/author_and_source"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                <View
+                    android:id="@+id/news_footer_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="@dimen/activity_vertical_small_margin"
+                    android:background="@color/newsItemFooterDividerColor"/>
+
+                <LinearLayout
+                    android:id="@+id/author_block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/activity_vertical_small_margin"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activity_news_author"/>
+                    <TextView
+                        android:id="@+id/news_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
+                        android:layout_marginStart="@dimen/activity_horizontal_small_margin"
+                        android:text="Иванов Иван Иванович"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/source_block"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/activity_vertical_small_margin"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activity_news_source"/>
+                    <TextView
+                        android:id="@+id/news_source"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_small_margin"
+                        android:layout_marginStart="@dimen/activity_horizontal_small_margin"
+                        android:text="Интернеты"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/test_html"
                 android:layout_width="match_parent"
